--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -350,7 +350,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="EXM-cw-U4m">
                         <barButtonItem key="rightBarButtonItem" title="выбор места" id="Xwb-D5-abo">
@@ -549,6 +549,7 @@
                                 <segment title="Как найти"/>
                                 <segment title="Наша команда"/>
                             </segments>
+                            <color key="tintColor" red="0.24705882352941178" green="0.68235294117647061" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="indexDidChangeForSelectedControl:" destination="C85-Eu-evA" eventType="valueChanged" id="Sob-vs-FpK"/>
                             </connections>
@@ -781,10 +782,15 @@
             <objects>
                 <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
+                    <tabBar key="tabBar" contentMode="scaleToFill" barStyle="black" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="0.24705882352941178" green="0.68235294117647061" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
                         <segue destination="48x-Wk-mBm" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
@@ -802,9 +808,10 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="48x-Wk-mBm" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Меню" image="top_charts" id="acW-dT-cKf"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pgz-Sk-tf9">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="pgz-Sk-tf9">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.2470588235" green="0.68235294120000001" blue="0.74901960779999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -821,9 +828,10 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KxN-3K-suu" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Контакты" image="contacts" id="6NN-VB-i0O"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vwT-wQ-VMq">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="vwT-wQ-VMq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.2470588235" green="0.68235294120000001" blue="0.74901960779999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
